LIST OF CHANGES
---------------

 - p4stage2 speed-up by caching references
 - p4stage2 errors in getting a reference made fatal
 - add --restart_file option to the iRODS publish script and pin the script's
     process file name to a particular LSF job

release 51.8
 - when comparing checksums, generate seqchksums for each cram file and merge
   the results rather than merging the cram files and generating seqchksum

release 51.7
 - replaces the original log role with the one from DNAP utilities,
   which provides a Log4perl logger and some convenience methods.

release 51.6
 - test and code fixes to ensure problem-free tests under Perl 5.22.2
 - tweak to qc_report_dir in bsub command for one library per lane case
 - fix convert-low-quality flag in bambi decode command; set bid_implementation always to bambi

release 51.5
 - update p4 stage 2 (seq_alignment) to handle all cases (e.g. no target alignment, spike tag)
 - support generation of targeted stats files in seq_alignment.pm with p4
 - qc jobs creation, can_run, check object instantiation:
     do not supply path/qc_in, which is now optional
     do not set attributes that the object does not have
 - allow specification of implementation (java or bambi) of illumina2bam and bamindexdecoder
    in p4 stage 1 via general_values.ini
 - add Broad Institute's RNA-SeQC to list of autoqc checks
 - run bam_flagstats autoqc check via the qc script
 - tweak for targeted stats files and also human split

release 51.2
 - patch to script_must_be_unique_runner - only ignore exact matches to the job id
 - change function order to run p4 stage 1 analysis by default

release 51.1.1
 - extended is_hiseqx_run to detect HiSeq 4000 runs
 - samtools1 cat .. doesn't work with different references, replaced by samtools1 merge ..

release 51.1
 - replaced bamcat .. by samtools1 cat .. in seqchksum comparision
   previous command line was too long for large pools
 - changes for pools with >999 samples, LSF job array index now 5 digits