@@ -14,6 +14,7 @@ instrument_name_prefixes=IL HS
 spiked_species=PhiX
 job_name_prefix=prod
 default_lsf_irods_resource=15
+publish2irods_max_errors=10
 bwa_aln_threads=6,12
 io_resource_slots=4
 single_plex_decode_max_no_calls=6
