@@ -3,8 +3,9 @@ LIST OF CHANGES
 
  - p4stage2 speed-up by caching references
  - p4stage2 errors in getting a reference made fatal
- - add --restart_file option to the iRODS publish script and pin the script's
-     process file name to a particular LSF job
+ - iRODS publish script new options: (1) --restart_file to pin the script's
+     process file name to a particular LSF job, (2) --max_errors to force the script to
+     fail after certain number of errors (10 specified in the configuration file)
 
 release 51.8
  - when comparing checksums, generate seqchksums for each cram file and merge
